Move punt pass tooltip to results h4 and fix vertical alignment

--- a/ActionCalculator.Web/Client/wwwroot/css/app.css
+++ b/ActionCalculator.Web/Client/wwwroot/css/app.css
@@ -251,7 +251,13 @@ h2 {
     cursor: pointer;
 }
 
-.calculation-results h4 .mud-icon-root {
+.calculation-results h4 .mud-tooltip-root {
+    vertical-align: middle;
+    position: relative;
+    top: -1px;
+}
+
+.calculation-results h4 > .mud-icon-root {
     position: absolute;
     top: 4px;
     right: 1px;
